Fix end modal overlapping with overlay

--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -101,7 +101,7 @@
 
     border-radius: 5px;
 
-    /**display:none;**/
+    display: none;
 }
 
 .modal-header {
@@ -142,6 +142,8 @@
     position: fixed;
     left: 0;
     top: 0;
+    right: 0;
+    bottom: 0;
     padding-top: 5rem;
     display: none;
 }
